kustomize/app_c1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aap-c1
  labels:
    app: app-c
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-c
      version: v2
  template:
    metadata:
      labels:
        app: app-c
        version: v2
    spec:
      containers:
        - name: app-c1
          image: APP_IMAGE_URL
          ports:
            - containerPort: 80
