kustomize/app_c1/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-c1
spec:
  ports:
    - name: svc
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: app-c1
  type: ClusterIP
